# blabbermouth

./: .gitignore  .pylintrc  .travis.yml  README.md  pyproject.toml  requirements.install.txt  requirements.lint.txt  setup.cfg  setup.py  tox.ini
blabbermouth/: aggregating_intelligence_core.py  bot_factory.py  callback_query.py  chat_intelligence.py  chatter_handler.py  cli.py  deaf_detector.py  intelligence_core_factory.py  intentional_replier.py  learning_handler.py  main.py  markov_chain_intelligence_core.py  markup.py  mongo_knowledge_base.py  reddit_browser.py  reddit_chatter.py  speaking_intelligence_core.py  thought.py  yandex_speech_client.py
blabbermouth/util/: config.py  lifespan.py  log.py
config/: logging.yaml
debian/: changelog  control  install  postinst  rules
debian/source/: options
